Changed layers Changed Nav Bar Changed RA data fixed z-index for conflicting elements

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,25 +7,17 @@ body {
 #map {
  height: 750px;
  width: auto;
+ z-index: 1;
 }
 
-.chart div {
-   font: 10px sans-serif;
-   background-color: steelblue;
-   text-align: right;
-   padding: 3px;
-   margin: 1px;
-   color: white;
- }
+.drop-index{
+  z-index: 1000;
+}
 
- .chart rect {
-   stroke: white;
-   fill: steelblue;
- }
 
  .info {
       padding: 6px 8px;
-      font: 14px/16px Arial, Helvetica, sans-serif;
+      font: 12px/14px Arial, Helvetica, sans-serif;
       background: white;
       background: rgba(255,255,255,0.8);
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -271,7 +263,8 @@ body {
        }
 
     .pos-button{
-      padding-top:7px;
+      /*padding-right: 10em;*/
+      padding: 15px 20px;
     }
 /*Legend
  --------------------------------------------------*/
@@ -292,6 +285,7 @@ body {
      float: left;
      margin-right: 8px;
      opacity: 0.7;
+
     }
 
 
