--- a/js/L.GeoSearch-master/src/css/l.geosearch.css
+++ b/js/L.GeoSearch-master/src/css/l.geosearch.css
@@ -31,8 +31,9 @@
 	width: 100%;
 	height: 28px;
 	padding: 0;
+	color: #000;
 	text-indent: 8px;
-	background: rgba(255, 255, 255, 0.75);			
+	background: rgba(255, 255, 255, 1);			
 	border-radius: 4px;
 	border: none;
 }
